2009-12-04  Tolleiv Nietsch <nietsch@aoemedia.de>

	* Fixed bug: #12916: Field name is not visible in BE module with detail view (thanks to Francois Suter)

2009-12-01  Tolleiv Nietsch <nietsch@aoemedia.de>

	* Fixed bug: #0012877: Missing semicolon in dragndrop.js (thanks to Sebastian Gebhard)

2009-12-01  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug: #12868: The new media element will not show up in NewCeWizard because of wrong object path (Thanks to Uschi Renziehausen)

2009-11-28  Tolleiv Nietsch <nietsch@aoemedia.de>

	* Follow-up to bugfix #12564: Localization view overlaps labels and doesn't align
	* Fixed bug: #12826: "TemplaVoilà " accent missing or wrong in some labels 
	* Fixed bug: #12819: Mapping module labels are messed up 
	* Fixed bug: #12804: Unlink icon doesn't hide the "unlinked" item

2009-11-27  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug: #12797: Activating delete icon does not work
	* Fixed bug: #10652: drag&drop of page contents not compatible with beLayout (Thanks to Marc Ehret)

2009-11-27  Steffen Kamper  <info@sk-typo3.de>

	* Converted manual to the new template
	
2009-11-26  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Released version 1.4.1

2009-11-26  Steffen Kamper  <info@sk-typo3.de>

	* Follow-up to bugfix #11180: New tag icons

2009-11-26  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Released version 1.4.0

2009-11-26  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug: #11180: New tag icons
	* Fixed bug: #12715: Use technique of 4.3 "New Content Element Wizard"
	* Fixed bug: #12654: Allow custom "New Site Wizard Template"

2009-11-26  Tolleiv Nietsch <nietsch@aoemedia.de>

	* Fixed bug: #8353: Element is referenced instead of moved
	* Fixed issue: #7263: New register for rendering of sections
	* Fixed issue: #8759: Possibility to define startup language setting for FCEs instances

2009-11-25  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug: #12564: Localization view overlaps labels and doesn't align